# ds-template

./: README.md  ccds.json
ccds/hook_utils/: dependencies.py
hooks/: post_gen_project.py
tests/: poetry_harness.sh  test_creation.py
{{ cookiecutter.repo_name }}/: .env.sample  .gitignore  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml
{{ cookiecutter.repo_name }}/.github/workflows/: build-pages.yml  test.yml
{{ cookiecutter.repo_name }}/docs/mkdocs/: mkdocs.yml
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/: getting-started.md  index.md
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/experiments/: index.md  v1.md
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/pipeline/: config.md  data.md  eval.md  features.md  index.md  report.md  train.md
{{ cookiecutter.repo_name }}/tests/scripts/: format.sh  lint.sh  test.sh
